<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="185dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="#D9806C"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="458dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:paddingStart="5dp"

                android:paddingBottom="5dp"
                android:text="@string/e_mail"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/mail_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:allowUndo="true"
                android:background="@drawable/textbackground"
                android:drawableStart="@drawable/envelope"
                android:hint="@string/mail"

                android:paddingStart="10dp"
                android:singleLine="true"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:paddingStart="5dp"

                android:paddingBottom="5dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:allowUndo="true"
                android:background="@drawable/textbackground"
                android:drawableStart="@drawable/lock"

                android:hint="@string/password"
                android:paddingLeft="10dp"

                android:paddingRight="10dp"
                android:singleLine="true"

                android:inputType="textPassword"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_password" />

            <ImageView
                android:id="@+id/password_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eye_slash"
                app:layout_constraintBottom_toBottomOf="@id/password_edit_text"
                app:layout_constraintTop_toTopOf="@id/password_edit_text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/password_edit_text"
                android:paddingRight="50dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/forget_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingEnd="30dp"
            android:text="@string/forget_password"
            android:textColor="#D9806C"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/register_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/login_button"
            android:text="@string/sign_in"
            android:textColor="#D9806C"
            android:layout_marginTop="10dp"
            android:textSize="30sp" />

        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@drawable/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/or_sign_in_with"
                android:textSize="15sp" />

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@drawable/line" />

        </LinearLayout>
        -->


    </LinearLayout>


    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="180dp"
            android:background="@drawable/fg_buttonbg"
            android:src="@drawable/google_button" />
    </LinearLayout>
    -->

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="15sp"/>

</LinearLayout>